# MPI_2D

./: CMakeLists.txt  main.cpp  mat_multiplication.cpp  mat_multiplication.h  tz.h
Profiling/: mpe.clog2  mpe.slog2
